--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 
 [dependencies]
 cry-sys = "0.1.0"
+lazy_static = "1.4.0"
+typenum = "1.15.0"
 #cry-sys = { version = "0.1.1", path = "../cry-sys" }
 
 [dev-dependencies]
